order placed completely

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://siddique:siddiquepassword@cluster0.r3bfqjn.mongodb.net/entekadadb?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://siddique:siddiquepassword@cluster0.r3bfqjn.mongodb.net/entekadadbtest?retryWrites=true&w=majority
 JWT_SECRET=siddiquesecret
