--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
-    "builds":[
+    "builds": [
         {
-            "src":"./server.js",
-            "use":"@vercel/node"
+            "src": ".Backend/server.js",
+            "use": "@vercel/node"
         }
     ],
-    "routes":[
+    "routes": [
         {
-            "src":"/.*",
-            "dest":"server.js"
+            "src": "/.*",
+            "dest": ".Backend/server.js"
         }
     ]
 }
