--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Backend/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd backend && npm install && cd ../Frontend && npm install && npm run build",
+    "build": "cd backend && npm install && cd ../Frontend && npm install",
     "start": "node Backend/server.js"
   },
   "repository": {
